# accelerate-1.3-segfault

./: release.nix
app/: app.cabal
derivations/: accelerate.nix
