cabal-version:      3.0
name:               app
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Anton Gushcha
maintainer:         ncrashed@protonmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable testapp
    import:           warnings
    main-is:          Main.hs
    build-depends:    
        base ^>=4.20,
        accelerate
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        RecordWildCards
